package design.parkinglot.common;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class Address {
    private String name;
    private String streetAddress;
    private String city;
    private String state;
    private String zipCode;
}
