package design.parkinglot.constant;

public enum AccountStatus {
    SUSPENDED,
    DEFAULT
}
