package design.parkinglot.constant;

public enum ParkingSpotType {
    COMPACT,
    LARGE,
    MOTORCYCLE,
    HANDICAPPED
}
