package design.parkinglot.constant;

public enum PaymentStatus {
    INITIATED,
    COMPLETED,
    PENDING,
    DECLINED,
    UNPAID
}
