package design.parkinglot.constant;
public enum VehicleType {
    CAR,
    TRUCK,
    VAN,
    MOTORCYCLE
}
