package design.parkinglot.model;

public class Entrance {
}
