package design.parkinglot.model;

public class Exit {
}
