package design.parkinglot.model.parkingspot;

import design.parkinglot.constant.ParkingSpotType;

public class Compact extends ParkingSpot {
    Compact() {
        super(ParkingSpotType.COMPACT);
    }
}
