package design.parkinglot.model.parkingspot;

import design.parkinglot.constant.ParkingSpotType;

public class Handicapped extends ParkingSpot {
    Handicapped() {
        super(ParkingSpotType.HANDICAPPED);
    }
}
