package design.parkinglot.model.parkingspot;

import design.parkinglot.constant.ParkingSpotType;

public class Large extends ParkingSpot {
    Large() {
        super(ParkingSpotType.LARGE);
    }
}
